changed css to wrap error message onto next line when screen size is 600px to prevent squeezing of zipcode text onto search line

--- a/src/style/searchBar.css
+++ b/src/style/searchBar.css
@@ -30,6 +30,7 @@
         display:flex;
         flex-direction: row;
         justify-content: center;
+        flex-wrap: wrap;
     }
     
     .add_city_form {
