--- a/src/style/weatherInfo.css
+++ b/src/style/weatherInfo.css
@@ -1,13 +1,3 @@
-
-
-.detailed_city {
-    margin-bottom:3em;
-}
-
-.city_name {
-    padding-left: 1.5em;
-}
-
 p {
     font-size:x-large;
     font-family: 'Times New Roman', Times, serif;
@@ -19,6 +9,10 @@ p {
         flex-direction: row;
         justify-content: flex-start;
     }
+
+    .daily_weather_data {
+        padding-bottom: 3em;
+    }
 }
 
 @media only screen and (max-width: 599px) {
@@ -27,9 +21,5 @@ p {
         flex-direction: row;
         justify-content: flex-start;
         flex-wrap: wrap;
-    }
-
-    .daily_info {
-        margin-bottom: 2em;
     }
 }
